radix-transactions/tests/assets/manifest_lexer_error_invalid_integer_2.diag
error: invalid integer value '300i8' - number too large to fit in target type
  |
1 | CALL_METHOD Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh") "lock_fee";
2 | CALL_METHOD Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq") "some_method" 300i8;
  |                                                                                                           ^^^^^ invalid integer value
3 | CALL_METHOD Address("account_sim1c956qr3kxlgypxwst89j9yf24tjc7zxd4up38x37zr6q4jxdx9rhma") "try_deposit_batch_or_abort" Expression("ENTIRE_WORKTOP") None;
  |